# bifrore

./: .gitignore  README.md  build.sh  pom.xml
.github/workflows/: build-dev.yml  linux-build.yml
bifrore-common/bifrore-common-store/src/main/java/bifrore/common/store/: PersistentMapStore.java
bifrore-destination-plugin/src/main/java/bifrore/destination/plugin/: BuiltinKafkaProducer.java
bifrore-processor/bifrore-processor-server/src/main/java/bifrore/processor/server/: ProcessorService.java
bifrore-processor/bifrore-processor-worker/src/main/java/bifrore/processor/worker/: ConsumerExecutor.java  ProcessorWorker.java  ProcessorWorkerBuilder.java  ReorderBufferNode.java  (+1 more)
bifrore-rpc/src/main/java/bifrore/baserpc/: RPCClient.java  RPCServer.java
bindings/jni/: README.md
bindings/jni/src/main/c/: bifrore_jni.c  bifrore_jni_common.h  bifrore_jni_direct_poll.c  bifrore_jni_heap_poll.c
bindings/jni/src/main/java/com/bifrore/: BifroRE.java  BifroREMetricsBinder.java  BifroREMetricsView.java  BifroREOptions.java  Experimental.java  NativeLibraryLoader.java
bindings/jni/src/test/c/: bifrore_jni_direct_test.c
bindings/jni/test/: pom.xml
bindings/jni/test/c/: bifrore_jni_direct_test.c
bindings/jni/test/java/com/bifrore/: HeapPollJmhBenchmark.java
bindings/jni/test/java/com/bifrore/test/: BifroREIntegrationTest.java
bindings/jni/test/resources/proto/: telemetry.desc  telemetry.proto
bindings/python/: README.md  bifrore.py
engine/: Cargo.toml
engine/bifrore-clientid-management/: Cargo.toml
engine/bifrore-clientid-management/src/: lib.rs
engine/bifrore-embed-core/: Cargo.toml
engine/bifrore-embed-core/benches/: bench_e2e.rs  bench_parse.rs  bench_pipeline.rs  benchmark_pipeline_single_rule.rs  runtime_bench.rs
engine/bifrore-embed-core/benches/common/: mod.rs
engine/bifrore-embed-core/src/: lib.rs  message.rs  metrics.rs  mqtt.rs  msg_ir.rs  payload.rs  rule.rs  runtime.rs
engine/bifrore-embed-core/testdata/: bifrore_test.desc  bifrore_test.proto
engine/bifrore-embed-ffi/: Cargo.toml
engine/bifrore-embed-ffi/src/: lib.rs  provision.rs  status.rs
examples/java/: README.md  pom.xml
examples/java/src/main/java/com/example/: App.java  AppDirectKafka.java  AppHeap.java  ExampleSupport.java
examples/java/src/main/resources/com/example/: rule-protobuf.json  rule.json
examples/python/: README.md  consumer.py
scripts/: bench.sh  common.sh  test.sh
(+1 files in other folders)
