[package]
name = "bifrore-embed-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.46"
thiserror = "1.0"
fxhash = "0.2"
rumqttc = { version = "0.24", optional = true }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time", "sync"], optional = true }
regex = "1.10"
log = "0.4"
flume = "0.11"
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
simd-json = { version = "0.14", optional = true, features = ["serde_impl"] }
rayon = "1.10"

[features]
mqtt = ["dep:rumqttc", "dep:tokio"]
simd-json = ["dep:simd-json"]

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.9"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench_e2e"
harness = false

[[bench]]
name = "bench_parse"
harness = false

[[bench]]
name = "bench_pipeline"
harness = false

[[bench]]
name = "benchmark_pipeline_single_rule"
harness = false
